# btl2025

./: .gitignore  README.md  build.sh  fetch-data.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-content.yml  lint.yml
css/: input.css
src/: aec2025.py  ballot.ts  btl2025.py  processor.py
